--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">japan-christian-socialmedia</string>
-    <string name="title_activity_main">japan-christian-socialmedia</string>
-    <string name="package_name">io.jonnyramen.jpnchstsocialmedia</string>
-    <string name="custom_url_scheme">io.jonnyramen.jpnchstsocialmedia</string>
+    <string name="app_name">ionic-web-filter</string>
+    <string name="title_activity_main">ionic-web-filter</string>
+    <string name="package_name">io.jonnyramen.ionicwebfilter</string>
+    <string name="custom_url_scheme">io.jonnyramen.ionicwebfilter</string>
 </resources>
